citrix-ADC-two-tier-microservice-deployment/yaml-files/ingress_vpx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   kubernetes.io/ingress.class: "vpx"
#   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "X.X.X.X"
   ingress.citrix.com/secure_backend: '{"lb-service-colddrinks": "True"}'
spec:
  tls:
  - secretName: hotdrink-secret
  rules:
  - host:  colddrink.beverages.com
    http:
      paths:
      - path: /
        backend:
          serviceName: lb-service-colddrinks
          servicePort: 443
